--- a/src/components/Staff/staff.module.css
+++ b/src/components/Staff/staff.module.css
@@ -1,16 +1,30 @@
 .staff{
     position: fixed;
-    height: 90vh;
+    height: 85vh;
     width: 100%;
     bottom: 0;
     left: 0;
     right: 0;
     background-color: white;
-    border-radius: 20px;
+    border-radius: 20px 20px 0 0;
     transform: translateY(100%);
     transition: transform .3s ease-in-out;
     padding: 30px 20px;
+    box-shadow: 0 1px 4px rgba(0,0,0,0.16);
+    overflow-y: scroll;
   }
+.staffArrow{
+    position: absolute;
+    width: 20px;
+    height: 20px;
+    border-radius: 20px;
+    background-color: #F3F1F7;
+    left: 50%;
+    top: -30px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
   
   .show{
     transform: translateY(0);
@@ -19,6 +33,7 @@
       display: flex;
       justify-content: space-between;
       align-items: center;
+      
   }
   .staffHeaderText{
       font-weight:700;
@@ -33,5 +48,14 @@
       justify-content: center;
       align-items: center;
       padding: 5px;
+    
 
   }
+.invisible{
+    visibility: hidden;
+}
+
+.staffContent{
+    display: flex;
+    flex-wrap: wrap;
+}
